--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,10 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Run a multi-line script
-        run: |
-          pwd
-          ls -la
+      - name: Run check.sh
+        run: bash ./tools/check.sh
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 #jobs:
